Bug 312092 Accessible hierarchy incomplete/incorrect r=benjamin sr=neil